--- a/templates/stock_analysis.html
+++ b/templates/stock_analysis.html
@@ -135,7 +135,7 @@
 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
 {
   "autosize": true,
-  "symbol": "{{ symbol }}",
+  "symbol": "{{ tradingview_symbol }}",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "light",
@@ -153,7 +153,7 @@
 function initTradingViewChart() {
     new TradingView.widget({
         "autosize": true,
-        "symbol": "{{ symbol }}",
+        "symbol": "{{ tradingview_symbol }}",
         "interval": "D",
         "timezone": "Etc/UTC",
         "theme": "light",
@@ -176,7 +176,7 @@ function initTradingViewChart() {
 // Initialize TradingView Mini Widget
 function initTradingViewMini() {
     new TradingView.MiniWidget({
-        "symbol": "{{ symbol }}",
+        "symbol": "{{ tradingview_symbol }}",
         "width": "100%",
         "height": "300",
         "locale": "en",
