--- a/templates/stock_analysis.html
+++ b/templates/stock_analysis.html
@@ -136,22 +136,7 @@
     </div>
 </div>
 
-<!-- TradingView Widgets -->
-<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-{
-  "autosize": true,
-  "symbol": "{{ tradingview_symbol }}",
-  "interval": "D",
-  "timezone": "Etc/UTC",
-  "theme": "light",
-  "style": "1",
-  "locale": "en",
-  "enable_publishing": false,
-  "allow_symbol_change": true,
-  "calendar": false,
-  "support_host": "https://www.tradingview.com"
-}
-</script>
+<!-- TradingView widgets are initialized via JavaScript below -->
 
 <script>
 // Initialize TradingView Advanced Chart
